Revision history for Module::Provision

0.10.1    2013-05-04 01:05:42
          - Created ::Config to allow attributes from config file

0.9.10    2013-05-03 20:42:32
          - Added edit_project and show_tab_title methods
          - Bob removes MANIFEST.bak with distclean
          - Abstracted builders with ::Base
          - Updated README.md
          - Fixed test
          - Split out even more traits
          - Fixed spelling
          - Fixed version numbers
          - Refactored into base class plus traits

0.8.4     2013-05-01 19:25:21
          - Replaced no_vcs option with vcs type none
          - Can now mp distmeta
          - Try untaint with higher exception level on MSWin32
          - Bumped version on C:U
          - New templates directory ~/.module_provision

0.7.8     2013-04-28 23:58:23
          - Bumped versions on F:DC and C:U
          - Stopped Stauner CPAN Testing - 0a7335a2-af67-11e2-99d1-ca991c44ed51
          - Stopped Konig   CPAN Testin  - 07224fc0-aed9-11e2-9633-3d74c1508286
          - Stopped Ciornii CPAN Testing - 07d44483-6c00-1014-9401-8524c7768a8d
          - Added informational ouput to subcommands
          - Updated POD
          - Stopped precommit hook change update_version code
          - Removed italics from abstract in POD
          - Added Rev keyword reset to update_version for git VCS

0.6.59    2013-04-24 05:10:52
          - Added ipc_srlock file to MANIFEST.SKIP
          - Tests use t directory as tempdir

0.5.57    2013-04-23 23:55:58
          - Added POD for update methods
          - Added Dist::Zilla::Plugin::ManifestInRoot :(
          - Added update_copyright_year and update_version

0.4.54    2013-04-23 00:22:42
          - Author tests now detect using $ENV{AUTHOR_TESTING}
          - Added comments to share/dist.ini and share/MI_Makefile.PL
          - Fixed spelling mistakes
          - Updated usage strings
          - Ignore meta files if VCS is SVN