@@ -1,6 +1,7 @@
 Revision history for Module::Provision
 
 0.10.1    2013-05-04 01:05:42
+          - Fixed author_id attribute
           - Created ::Config to allow attributes from config file
 
 0.9.10    2013-05-03 20:42:32
